Complete nav on mobile dev + add new @media to solve problem with landscape orientation

--- a/src/sass/_small.scss
+++ b/src/sass/_small.scss
@@ -1,10 +1,16 @@
-@media (min-width: 280px) and (orientation: landscape) {
+@media (max-width: 767px) and (orientation: landscape) {
 	.nav {
 		&__menu {
 			a {
+				font-size: 2rem;
+
 				&:not(&:last-child) {
 					margin-bottom: 1em;
 				}
+			}
+
+			&--mobile {
+				margin-top: 3em;
 			}
 		}
 	}
