--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -68,7 +68,7 @@ button {
 	&__menu {
 		a {
 			font-weight: 600;
-			font-size: 2.4rem;
+			font-size: 2.2rem;
 			color: #000;
 			text-transform: uppercase;
 
